--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/autoreview?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 
   profiles:
-    include: aouth
+    include: auth
 
   jpa:
     hibernate:
