feat: yml 파일 add 취소

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@ out/
 /nbdist/
 /.nb-gradle/
 
+### YAML Settings ###
+/src/main/resources/*.yaml
+/src/test/resources/application-test.yaml
+
 ### VS Code ###
 .vscode/
-
-application-auth.yml
