feat: submodule에 yml 설정 파일들 클론해와서 로컬에서 쓸 수 있게 함

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,11 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.register('copyYaml', Copy) {
+    copy {
+        from 'security_setting'
+        include "*.yml"
+        into 'src/main/resources'
+    }
+}
