refactor: 파일 수정
- build.gradle 오타 수정
- gitignore 에 gradlew 추가

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-tasks.register('copyYaml', Copy) {
+tasks.register('copyYml', Copy) {
     copy {
         from 'security_setting'
         include "*.yml"
