test: cd 테스트0.2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Copy private resources
         run: |
-          ./gradlew copyYaml --no-daemon
-          ./gradlew copyEnv --no-daemon
+          ./gradlew copyYml --no-daemon
 
       - name: Build gradle
         run: ./gradlew clean build
