--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,4 +67,4 @@ jobs:
             sudo docker stop ori-api-server
             sudo docker rm ori-api-server
             sudo docker rmi ehgur062300/ori-backend:0.1
-            sudo docker run -d 00name ori-api-server --network ori-network -p 8080:8080 ehgur062300/ori-backend:0.1
+            sudo docker run -d --name ori-api-server --network ori-network -p 8080:8080 ehgur062300/ori-backend:0.1
