faet: test 제외하고 clean build 함

--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
+tasks.named('test') {
+    useJUnitPlatform()
+}
 
 tasks.register('copyYml', Copy) {
     copy {
