--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           ./gradlew copyYml --no-daemon
 
       - name: Build gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x test
 
       - name: Build Docker image
         run: docker build . --tag ehgur062300/ori-backend:0.1
