--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
               "auth_provider_x509_cert_url": "${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL }}",
               "client_x509_cert_url": "${{ secrets.FIREBASE_CLIENT_CERT_URL }}",
               "universe_domain": "${{ secrets.FIREBASE_UNIVERSE_DOMAIN }}"
-            }' > resources/ori-push-notification-firebase-adminsdk-k9qqe-d0581b0c52.json
+            }' > resources/${{ secrets.FIREBASE_PROJECT_ID }}-firebase-adminsdk-k9qqe-d0581b0c52.json
 
       - name: Copy private resources
         run: |
