feat: 브랜치 트리거 main으로 변경

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   build:
@@ -75,9 +75,9 @@ jobs:
       - name: Deploy to Dev Server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DEV_HOST }}
-          username: ${{ secrets.DEV_USERNAME }}
-          key: ${{ secrets.DEV_PRIVATE_KEY }}
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USERNAME }}
+          key: ${{ secrets.PROD_PRIVATE_KEY }}
           script: |
             # 도커 컨테이너 재배포
             sudo docker stop ${{ secrets.DOCKER_CONTAINER_NAME }}
