refactor: 테스트 실행 전 yml 파일 복사

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,14 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Copy private resources
+        run: ./gradlew copyYml --no-daemon
+
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew test -Dspring.profiles.active=test
 
   build:
     name: Run on Ubuntu
@@ -43,8 +49,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Copy private resources
-        run: |
-          ./gradlew copyYml --no-daemon
+        run: ./gradlew copyYml --no-daemon
 
       - name: Create Firebase JSON file
         run: |
@@ -73,7 +78,6 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: docker build . --tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY_NAME }}:prod -f Dockerfile.prod
 
-
       - name: Push Dev Docker image
         if: github.ref == 'refs/heads/dev'
         run: |
@@ -85,7 +89,6 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY_NAME }}:prod
-          
 
   deploy:
     runs-on: ubuntu-latest
@@ -110,7 +113,6 @@ jobs:
           username: ${{ secrets.DEV_USERNAME }}
           key: ${{ secrets.DEV_PRIVATE_KEY }}
           script: |
-            # 도커 컨테이너 재배포
             sudo docker stop ${{ secrets.DOCKER_CONTAINER_NAME }}
             sudo docker rm ${{ secrets.DOCKER_CONTAINER_NAME }}
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY_NAME }}:dev
@@ -124,7 +126,6 @@ jobs:
           username: ${{ secrets.PROD_USERNAME }}
           key: ${{ secrets.PROD_PRIVATE_KEY }}
           script: |
-            # 도커 컨테이너 재배포
             sudo docker stop ${{ secrets.DOCKER_CONTAINER_NAME }}
             sudo docker rm ${{ secrets.DOCKER_CONTAINER_NAME }}
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY_NAME }}:prod
