--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,26 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: MySQL 설치
+        uses: samin/mysql-action@v1
+        with:
+          host port: 3306 # Optional, default value is 3306. The port of host
+          container port: 3307 # Optional, default value is 3306. The port of container
+          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
+          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
+          mysql database: test # Optional, default value is "test". The specified database which will be create
+          mysql user: tester # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Of course you can use secrets, too
+          mysql password: ${{ secrets.TEST_DB_PASSWORD }}
+
+      - name: yml 파일 생성
+        run: |
+          cd ./src/test/resources
+          rm -rf ./application.properties
+          touch ./application.yml
+          echo "${{ secrets.APPLICATION_TEST_YML }}" > ./application-test.yml
+        shell: bash
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
