--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Copy private resources
-        run: ./gradlew copyYml --no-daemon
+      - name: 어플리케이션 실행 테스트(테스트 코드 제외하고 실행)
+        run: ./gradlew clean build --exclude-task test
 
-      - name: Run tests
-        run: ./gradlew test -Dspring.profiles.active=test
+      - name: Test 실행(테스트 코드만 실행)
+        run: ./gradlew --info test
 
   build:
     name: Run on Ubuntu
