refactor: yml 불러오는 방식을 base64 디코딩으로 변경

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,10 @@ jobs:
       - name: yml 파일 생성
         run: |
           mkdir -p ./src/test/resources
-          rm -f ./src/test/resources/application.properties
-          touch ./src/test/resources/application.yml
-          echo "${{ secrets.APPLICATION_TEST_YML }}" > ./src/test/resources/application-test.yml
+          rm -f ./src/test/resources/application-test.yml
+          printf "%s" "${{ secrets.APPLICATION_TEST_YML_BASE64 }}" | base64 -d > ./src/test/resources/application-test.yml
         shell: bash
+
 
       - name: Debug application-test.yml
         run: |
