refactor: git actions 가상 머신을 통해 테스트 성공 시도
- 가상 머신에 MySQL & Redis 설치

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,39 +9,56 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.TEST_DB_PASSWORD}}
+          MYSQL_DATABASE: test
+          MYSQL_USER: tester
+          MYSQL_PASSWORD: ${{ secrets.TEST_DB_PASSWORD}}
+        options: >-
+          --health-cmd "mysqladmin ping -h localhost"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      redis:
+        image: redis:7.0
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: MySQL 설치
-        uses: samin/mysql-action@v1
-        with:
-          host port: 3306 # Optional, default value is 3306. The port of host
-          container port: 3307 # Optional, default value is 3306. The port of container
-          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-          mysql database: test # Optional, default value is "test". The specified database which will be create
-          mysql user: tester # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Of course you can use secrets, too
-          mysql password: ${{ secrets.TEST_DB_PASSWORD }}
-
-      - name: yml 파일 생성
+      - name: MySQL 연결 확인
         run: |
-          mkdir -p ./src/test/resources
-          rm -f ./src/test/resources/application-test.yml
-          printf "%s" "${{ secrets.APPLICATION_TEST_YML_BASE64 }}" | base64 -d > ./src/test/resources/application-test.yml
-        shell: bash
+          sudo apt-get update && sudo apt-get install -y mysql-client
+          mysql -htest -P3306 -utester -p${{ secrets.TEST_DB_PASSWORD}} -e "SHOW DATABASES;"
 
-
-      - name: Debug application-test.yml
+      - name: Redis 연결 확인
         run: |
-          head -n 10 ./src/test/resources/application-test.yml
+          sudo apt-get update && sudo apt-get install -y redis-tools
+          redis-cli -h localhost ping
+
+      - name: 테스트 실행
+        run: ./gradlew test
+        env:
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_NAME: test
+          DB_USER: tester
+          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD}}
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
