refactor: test 실행 환경 적용

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,12 @@ jobs:
 
       - name: Test 실행(테스트 코드만 실행)
         run: ./gradlew --info test
+        env:
+          SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/test
+          SPRING_DATASOURCE_USERNAME: tester
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
+          SPRING_REDIS_HOST: 127.0.0.1
+          SPRING_REDIS_PORT: 6379
 
   build:
     name: Run on Ubuntu
