refactor: test active profile 설정 제거 및 ci.yml 추가
- ci 와 로컬 환경에서 설정 파일 차이를 두기 위해 @ActiveProfile() 어노테이션 삭제

- 앞으로는 로컬환경에서 테스트하려면 직접 test 환경으로 설정해야함

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,17 +49,18 @@ jobs:
           sudo apt-get update && sudo apt-get install -y redis-tools
           redis-cli -h localhost ping
 
-      - name: Copy private test resources
-        run: ./gradlew copyTestYml --no-daemon
+      - name: Copy private ci resources
+        run: ./gradlew copyCiYml --no-daemon
 
       - name: 테스트 실행
         run: ./gradlew test
         env:
+          SPRING_PROFILES_ACTIVE: ci
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_NAME: test
           DB_USER: tester
-          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD}}
+          DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
           REDIS_HOST: 127.0.0.1
           REDIS_PORT: 6379
 
