--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Copy private ci resources
         run: ./gradlew copyCiYml --no-daemon
 
+      - name: Show copied ci yml
+        run: cat src/test/resources/application-ci.yml
+
       - name: 테스트 실행
         run: ./gradlew test
         env:
