--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,21 @@ jobs:
       - name: Copy private ci resources
         run: ./gradlew copyCiYml --no-daemon
 
-      - name: Show copied ci yml
-        run: cat src/test/resources/application-ci.yml
+      - name: Create Firebase JSON file
+        run: |
+          echo '{
+              "type": "${{ secrets.FIREBASE_TYPE }}",
+              "project_id": "${{ secrets.FIREBASE_PROJECT_ID }}",
+              "private_key_id": "${{ secrets.FIREBASE_PRIVATE_KEY_ID }}",
+              "private_key": "${{ secrets.FIREBASE_PRIVATE_KEY }}",
+              "client_email": "${{ secrets.FIREBASE_CLIENT_EMAIL }}",
+              "client_id": "${{ secrets.FIREBASE_CLIENT_ID }}",
+              "auth_uri": "${{ secrets.FIREBASE_AUTH_URI }}",
+              "token_uri": "${{ secrets.FIREBASE_TOKEN_URI }}",
+              "auth_provider_x509_cert_url": "${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL }}",
+              "client_x509_cert_url": "${{ secrets.FIREBASE_CLIENT_CERT_URL }}",
+              "universe_domain": "${{ secrets.FIREBASE_UNIVERSE_DOMAIN }}"
+            }' > src/main/resources/ori-push-notification-firebase-adminsdk-k9qqe-d0581b0c52.json
 
       - name: 테스트 실행
         run: ./gradlew test
