--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
-    id 'org.flywaydb.flyway' version '8.5.13'
+    id 'org.flywaydb.flyway' version '11.10.0'
 }
 
 group = 'org.example'
@@ -47,7 +47,7 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // Flyway 라이브러리 사용을 위한 기본적인 의존성 추가
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-core:11.10.0'
 
     // MySQL 을 사용해야한다면 추가
     implementation 'org.flywaydb:flyway-mysql'
